--- a/content/classes/NRES222/nine_mile_ws.html
+++ b/content/classes/NRES222/nine_mile_ws.html
@@ -1,7 +1,7 @@
 ---
 title: "9 Mile Prairie Worksheet"
 author: "Drew Tyre"
-date: "2017-09-10"
+date: "2017-09-11"
 type: "lab"
 weight: 222041
 ---
@@ -13,7 +13,7 @@ weight: 222041
 <p>The goal of this week’s lab is to analyze the species area curve data from 9 Mile Prairie, and get more experience making figures and calculating summary statistics in R. Like all labs, I expect you to submit an R Markdown file that I can compile to html. You should assume any data files are in a subdirectory called “data”. Your file should <em>not</em> echo the code used. In the handout, there may be several code blocks making the same graph multiple times with slight tweaks. You should only keep the best and final graph that you chose in your submitted file. Answer the <em>numbered questions</em> in text, referring to graphical and tabular output as needed. You may use base graphics or ggplot2, according to your preference.</p>
 <p>We collected species occurence data in nested quadrats in 3 different parts of the original 9 mile Prairie. Each section collected data from a portion burned in 2015, 2016 or earlier this year in 2017. Dr. Wedin’s hypothesis is that the biodiversity will be the same in these three fields, even though they look very different to the eye.</p>
 <p>Open RStudio and create a new project. I recommend creating a project for each week of class inside a folder called <code>NRES222</code> or whatever else works for you.</p>
-<p>Download the data from the link in Canvas, saving it into a subdirectory of your project called <code>data</code>. Make sure to keep the filename exactly the same: <code>9mile_plants_all.csv</code>!</p>
+<p>Download the data <a href="/classes/NRES222/nine_mile_ws/data/9mile_plants_all.csv">from here</a>, saving it into a subdirectory of your project called <code>data</code>. Make sure to keep the filename exactly the same: <code>9mile_plants_all.csv</code>!</p>
 <p>Create a new R Markdown file by clicking the button in the top left of RStudio with a <code>+</code> on it. Save this file into your project directory with a filename <code>yourlastname_ninemile.Rmd</code>.</p>
 <p>At the top of the file is some header information that you can leave as is for now.</p>
 On line 8 you will see a block of text with <code>```</code> on the top and bottom:
