--- a/content/classes/NRES803/Week_1/fittinglines_example.html
+++ b/content/classes/NRES803/Week_1/fittinglines_example.html
@@ -15,7 +15,7 @@ y = x
 plot(x,y,xlab=&quot;&quot;,ylab=&quot;&quot;,bty=&quot;n&quot;,xlim=c(0,3),ylim=c(0,3))
 lm.1 = lm(y~x)
 abline(lm.1)</code></pre>
-<p><img src="/"https://drewtyre.rbind.io/"  # End your URL with a `/` trailing slash.classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-2-1.png" width="288" /></p>
+<p><img src="/classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-2-1.png" width="288" /></p>
 <pre class="r"><code>summary(lm.1)</code></pre>
 <pre><code>## Warning in summary.lm(lm.1): essentially perfect fit: summary may be
 ## unreliable</code></pre>
@@ -44,7 +44,7 @@ y = c(1,2,2)
 plot(x,y,xlab=&quot;&quot;,ylab=&quot;&quot;,bty=&quot;n&quot;,xlim=c(0,3),ylim=c(0,3))
 lm.1 = lm(y~x)
 abline(lm.1)</code></pre>
-<p><img src="/"https://drewtyre.rbind.io/"  # End your URL with a `/` trailing slash.classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-3-1.png" width="288" /></p>
+<p><img src="/classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-3-1.png" width="288" /></p>
 <pre class="r"><code>summary(lm.1)</code></pre>
 <pre><code>## 
 ## Call:
@@ -69,7 +69,7 @@ y = c(1,2,1,2)
 plot(x,y,xlab=&quot;&quot;,ylab=&quot;&quot;,bty=&quot;n&quot;,xlim=c(0,3),ylim=c(0,3))
 lm.1 = lm(y~x)
 abline(lm.1)</code></pre>
-<p><img src="/"https://drewtyre.rbind.io/"  # End your URL with a `/` trailing slash.classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-4-1.png" width="288" /></p>
+<p><img src="/classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-4-1.png" width="288" /></p>
 <pre class="r"><code>summary(lm.1)</code></pre>
 <pre><code>## 
 ## Call:
@@ -94,7 +94,7 @@ y = c(2,3,1,3,2,3)
 plot(x,y,xlab=&quot;&quot;,ylab=&quot;&quot;,bty=&quot;n&quot;,xlim=c(0,6),ylim=c(0,4))
 lm.1 = lm(y~x)
 abline(lm.1)</code></pre>
-<p><img src="/"https://drewtyre.rbind.io/"  # End your URL with a `/` trailing slash.classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-5-1.png" width="288" /></p>
+<p><img src="/classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-5-1.png" width="288" /></p>
 <pre class="r"><code>summary(lm.1)</code></pre>
 <pre><code>## 
 ## Call:
