Week 13 lab, fix ordering

--- a/content/classes/NRES803/Week_11/lab_11.html
+++ b/content/classes/NRES803/Week_11/lab_11.html
@@ -1,10 +1,11 @@
 ---
 title: "Week 11 Lab -- GLMM"
 author: "Drew Tyre"
-date: "2017-11-06"
+date: "2017-11-15"
 output: 
   html_document:
     fig_caption: TRUE
+weight: 803111
 ---
 
 
