--- a/content/classes/NRES803/Week_12/Lab_12.html
+++ b/content/classes/NRES803/Week_12/Lab_12.html
@@ -1,10 +1,12 @@
 ---
 title: "Week 12 Lab -- Confidence Intervals in (G)LMM"
 author: "Drew Tyre"
-date: "2017-11-10"
+date: "2017-11-15"
 output: 
   html_document:
     fig_caption: true
+    
+weight: 803121
 ---
 
 
